# fastapi-sqlalchemy-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yaml  justfile  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 2026_04_18_1453-8726ae51c6d5_initial.py
app/: main.py  models.py  schemas.py
app/api/: deps.py  health.py  main.py
app/api/v1/: __init__.py  login.py  posts.py  users.py
app/celery/: __init__.py  celery_app.py  tasks.py
app/core/: __init__.py  config.py  db.py  logger.py  security.py
app/crud/: __init__.py  post.py  user.py
app/db/: session.py
app/models/: __init__.py  post.py  user.py
app/schemas/: __init__.py  error.py  post.py  token.py  user.py
scripts/: __init__.py  seed_db.py
tests/: conftest.py  constants.py  init-test-db.sql  test_deps.py  test_health.py  test_login.py  test_posts.py  test_users.py
