[project]
name = "fastapi-blog-backend"
version = "0.1.0"
description = "FastAPI / async SQLAlchemy backend for a blog"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "alembic[tz]>=1.18.3",
  "asyncpg>=0.31.0",
  "celery[redis]>=5.6.2",
  "fastapi[standard]>=0.128.5",
  "pwdlib[argon2]>=0.3.0",
  "pydantic-settings>=2.12.0",
  "pyjwt>=2.11.0",
  "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
  "celery-types>=0.24.0",
  "flower>=2.0.1",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest-asyncio>=1.3.0",
  "pytest>=9.0.2",
  "ruff>=0.15.0",
  "toml-sort>=0.24.3",
]

[tool.alembic]
file_template = """
%%(year)d_%%(month).2d_%%(day).2d_\
%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
"""
prepend_sys_path = ["."]
script_location = "alembic"
timezone = "UTC"

[[tool.alembic.post_write_hooks]]
module = "ruff"
name = "ruff-check"
options = "check --fix REVISION_SCRIPT_FILENAME"
type = "module"

[[tool.alembic.post_write_hooks]]
module = "ruff"
name = "ruff-format"
options = "format REVISION_SCRIPT_FILENAME"
type = "module"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.14"
strict = true
warn_unreachable = true

[tool.pytest]
addopts = ["-q", "-ra"]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
minversion = "9.0"
required_plugins = ["pytest-asyncio~=1.3.0"]
strict = true
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.lint]
select = [
  "A",  # flake8-builtins
  "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  "ASYNC",  # flake8-async
  "B",  # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",  # flake8-comprehensions
  "COM",  # flake8-commas
  "D",  # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle error
  "EM",  # flake8-errmsg
  "F",  # Pyflakes
  "FAST",  # FastAPI
  "FBT",  # flake8-boolean-trap
  "FURB",  # refurb
  "G",  # flake8-logging-format
  "I",  # isort
  "ICN",  # flake8-import-conventions
  "INP",  # flake8-no-pep420
  "LOG",  # flake8-logging
  "N",  # pep8-naming
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",  # Pylint
  "PT",  # flake8-pytest-style
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "T20",  # flake8-print
  "TC",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "TRY",  # tryceratops
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
# Disable rules that may conflict with the Ruff formatter.
ignore = [
  "COM812",  # missing-trailing-comma
  "COM819",  # prohibited-trailing-comma
  "D206",  # docstring-tab-indentation
  "D300",  # triple-single-quotes
  "E111",  # indentation-with-invalid-multiple
  "E114",  # indentation-with-invalid-multiple-comment
  "E117",  # over-indented
  "W191",  # tab-indentation
]

[tool.ruff.lint.flake8-type-checking]
# Treat type annotations in SQLAlchemy models and Pydantic schemas
# as required at runtime.
runtime-evaluated-base-classes = [
  "app.core.db.Base",
  "pydantic.BaseModel",
  "sqlalchemy.orm.DeclarativeBase",
]

[tool.ruff.lint.isort]
known-third-party = ["alembic"]

[tool.ruff.lint.pep8-naming]
# Allow uppercase computed fields in Settings to match environment
# variable naming conventions.
ignore-names = ["DATABASE_URL", "REDIS_URL"]

[tool.ruff.lint.per-file-ignores]
# Allow non-package structure for the Alembic directory.
"alembic/**" = ["INP001"]
# Relax docstring and line length rules for auto-generated migrations.
"alembic/versions/*" = ["D", "E501"]
# Permit runtime imports of API dependencies.
"app/api/**" = ["TC001", "TC002"]
# Allow asserts in tests.
"tests/*" = ["S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
in_place = true
sort_first = ["project", "dependency-groups"]
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
overrides."project".table_keys = false
overrides."tool.ruff.lint".table_keys = false
overrides."tool.tomlsort.sort_first".inline_arrays = false
